# webserv

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.formatter  Dockerfile.ptest  Makefile  README.md  \  formatter.sh  index.html  requirements.txt  run_ptest.sh
.github/workflows/: build.yaml  format_build.yaml  format_build.yml  formatter.yml  run_test.yml
cgi/: Makefile  rich.php  script.php
cgi/src/: cgi.cpp
conf/: test.conf  webserv.conf
data/: index.html
docs/: config.md  http_parser_design.md  http_request.abnf  server.md  webserv_conf.abnf
html/: 404.html  50x.html  upload.py
include/: ConnectionManager.hpp  NetworkIOHandler.hpp  RequestHandler.hpp  ServerConfig.hpp
include/config/: Main.hpp  Use.hpp
include/config_parser/: conf.hpp
prototype/: EchoServer.cpp  EchoServer.hpp  README.md  echo_server.c  main.cpp  webserver.hpp  webserver1.hpp  webserver2.hpp
prototype/ver-1/: EchoServer.cpp  EchoServer.hpp  README.md  main.cpp
prototype/ver-2/: EchoServer.cpp  EchoServer.hpp  README.md  main.cpp
prototype/ver-3/: .EchoServer.cpp.swp  EchoServer.cpp  EchoServer.hpp  README.md
src/: ConnectionManager.cpp  ConnectionManager.hpp  EchoServer.cpp  EchoServer.hpp  EventManager.cpp  EventManager.hpp  FileUtils.cpp  FileUtils.hpp  HttpMessage.cpp  HttpMessage.hpp  NetworkIOHandler.cpp  NetworkIOHandler.hpp  RequestHandler.cpp  RequestHandler.hpp  ServerConfig.cpp  ServerConfig.hpp  SysCallWrapper.cpp  SysCallWrapper.hpp  WebServer.cpp  WebServer.hpp  main.cpp
src/cgi/: CgiExecutor.cpp  CgiExecutor.hpp  CgiHandler.cpp  CgiHandler.hpp
src/config/: AccessLog.hpp  Alias.hpp  Allow.hpp  AllowDeny.hpp  Autoindex.hpp  ClientMaxBodySize.hpp  Deny.hpp  ErrorLog.hpp  ErrorLogParser.hpp  ErrorPage.hpp  Events.hpp  EventsParser.hpp  Http.hpp  Index.hpp  InitLog.cpp  InitLog.hpp  InitLogFd.cpp  InitLogFd.hpp  KeepaliveTime.hpp  KeepaliveTimeout.hpp  Lexer.cpp  Lexer.hpp  LimitExcept.hpp  Listen.hpp  Location.hpp  LogFd.cpp  LogFd.hpp  Main.hpp  Parser.cpp  Parser.hpp  ReceiveTimeout.hpp  Return.hpp  Root.hpp  SendTimeout.hpp  Server.hpp  ServerName.hpp  Size.hpp  Time.hpp  TryFiles.hpp  Use.hpp  (+8 more)
src/config/parser/: AccessLogParser.hpp  AllowParser.hpp  AutoindexParser.hpp  ClientMaxBodySizeParser.hpp  DenyParser.hpp  ErrorLogParser.hpp  EventsParser.hpp  HttpParser.hpp  IndexParser.hpp  KeepaliveTimeParser.hpp  KeepaliveTimeoutParser.hpp  Lexer.cpp  Lexer.hpp  LimitExceptParser.hpp  LocationParser.hpp  MainParser.hpp  Parser.hpp  RootParser.hpp  SendTimeoutParser.hpp  UseParser.hpp  UseridDomainParser.hpp  UseridExpiresParser.hpp  UseridParser.hpp  UseridPathParser.hpp  UseridServiceParser.hpp  VirtualServerParser.hpp  WorkerConnectionsParser.hpp
src/http/: HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
src/main/: main.cpp
src/server/: ActiveEventManager.cpp  ActiveEventManager.hpp  CGIExecutor.cpp  CGIExecutor.hpp  CGIHandler.cpp  CGIHandler.hpp  CGIParser.cpp  CGIParser.hpp  CgiExecutor.cpp  CgiExecutor.hpp  CgiHandler.cpp  CgiHandler.hpp  CgiParser.cpp  CgiParser.hpp  ConfigHandler.cpp  ConfigHandler.hpp  ConnectionManager.cpp  ConnectionManager.hpp  EpollActiveEventManager.cpp  EpollActiveEventManager.hpp  EpollServer.cpp  EpollServer.hpp  EventHandler.cpp  EventHandler.hpp  EventManager.cpp  EventManager.hpp  FileUtils.cpp  FileUtils.hpp  HttpMessage.cpp  HttpMessage.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  IActiveEventManager.hpp  IServer.hpp  KqueueActiveEventManager.cpp  KqueueActiveEventManager.hpp  KqueueServer.cpp  KqueueServer.hpp  (+23 more)
src/utils/: FileUtils.cpp  FileUtils.hpp  IOUtils.cpp  IOUtils.hpp  Utils.cpp  Utils.hpp  error.cpp  error.hpp  syscall_wrapper.cpp  syscall_wrapper.hpp  utils.cpp  utils.hpp
test/: GlobalTestEnvironment.hpp  global_test_env.cpp  gtest.cpp  ptest.sh  run_tests.py  test.cpp  test.sh
test/cgi/: CGIExecutor_test.cpp  CGIParser_test.cpp  CgiExecutor_test.cpp  CgiParser_test.cpp  meta_vars_test.py  meta_vars_test.sh
test/cgi/cgi_files/: print_mata_vars.py
test/conf/: confLexerTest.cpp  confParseDirectiveTest.cpp  conf_parser_test.sh  directive_err_test.sh  directives_test.cpp  directives_test.hpp  init_log_test.cpp  lexer_test.cpp  main_parser_test.cpp  main_parser_test.sh
test/conf/LexerTestFiles/: events.conf  lexer1.conf
test/conf/confFIle/: lexer3.conf
test/conf/confFile/: double_in_single_quote.conf  lexer3.conf  single_in_double_quote.conf
test/conf/directive_parser/: only_context.conf
test/conf/init_log_files/: initAcsLogFds_fail.conf  initAcsLogFds_success.conf  initErrLogFds_fail.conf  initErrLogFds_success.conf
test/conf/lexer_test_files/: comment.conf  continuous_quote.conf  only_comment.conf  quote.conf
test/conf_parser/: conf_parser_test.sh
test/integration/: TimeoutTest.sh
test/integration_test/: CgiRecvTimeoutTest.py  CgiSendTimeoutTest.py  KeepaliveTimeoutTest.py  KeepaliveTimeoutTest.sh  ReceiveTimeoutTest.sh  SendTimeoutTest.sh  TimeoutTest.sh  client.py  delete_test.py  multiple_requests_test.py  server_res_header_test.py  server_res_test.sh  upload_test.py
test/server/: HttpRequestErrorTest.cpp  HttpRequestOkTest.cpp  HttpRequestTest.cpp  HttpResponseTest.cpp  TimerTree_test.cpp  WorkerConnectionsNumTest.cpp  config_handler_test.cpp  requestParserTest.cpp  server_config_test.cpp  server_res_test.sh  server_test.sh
test/server/ConfigHandler/: ConfigHandlerTest.hpp
test/server/ConfigHandlerTestFiles/: searchFile_test.conf  searchKeepaliveTimeout_test.conf  searchSendTimeout_test.conf  writeAcsLog_test.conf  writeErrLog_test.conf
test/server/HttpRequest/: HttpRequestErrorTest.cpp  HttpRequestOkTest.cpp  cli_max_body_size_test.cpp  cli_max_body_size_test.hpp
test/server/HttpResponse/: HttpResponseTest.hpp  ResponseTest.hpp
test/server/ResponseTestFiles/: ErrorPage.conf  ParseError.conf  Return.conf  autoIndex.conf  searchResPath.conf  staticHandler.conf
test/stress_test/: build_stress_test.py  stress_test.sh  test_dynamic_res.js  test_mixed_res.js  test_static_res.js
(+392 files in other folders)
